[tool.poetry]
name = "cartographie-militante"
version = "0.0.1"
description = ""
authors = ["Raphaël Ollando <raphael@ollando.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
alphashape = "^1.3.1"
folium = "^0.15.1"
beautifulsoup4 = "^4.12.2"
pyproj = "^3.6.0"
rich = "^13.5.2"
django = "^5.0"
lorem = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
