[tool.poetry]
name = "cleeb"
version = "0.0.1"
description = ""
authors = ["Raphaël Ollando <raphael@ollando.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
alphashape = "^1.3.1"
folium = "^0.15.1"
beautifulsoup4 = "^4.12.3"
pyproj = "^3.6.0"
rich = "^13.5.2"
django = "^5.0.1"
lorem = "^0.1.1"
pyshp = "^2.3.1"
geojson = "^3.1.0"
celery = "^5.3.6"
Pillow = "^10.2.0"

# Deployement extras dependencies
gunicorn = {version = "^21.2.0", optional = true}
mysqlclient = {version = "^2.1.0", optional = true}

[tool.poetry.extras]
deploy = ["gunicorn", "mysqlclient"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
